Added support for private CDN * Added middleware utility to set signed cookie * Added refresh endpoint to re-set the cookie * Added client interval to refresh if no endpoint is called in the timeout * Added shared timeout constant * Added some envionrment variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,7 @@ jobs:
           name: Get config
           command: |
             aws s3 cp s3://configurations-pipeline/.env . 
+            aws s3 cp s3://configurations-pipeline/pk-APKAIUIJTQRAIWFPJFEA.pem .
       - run:
           name: Build application Docker image
           command: |
