--- a/.env.test
+++ b/.env.test
@@ -12,3 +12,6 @@ AWS_SECRET_ACCESS_KEY=secret
 S3_BUCKET=carpedev
 NODE_ENV=test
 LOG_LEVEL=info
+CDN_DOMAIN=photos.local.carpedalan.com
+DOMAIN=local.carpedalan.com
+CLOUDFRONT_KEY_ID=APKAIUIJTQRAIWFPJFEA
