--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,10 @@ http {
         listen 80;
 
         location / {
+            proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme; 
+
           proxy_pass http://node-app;
         }
         fastcgi_read_timeout 300;
@@ -26,13 +30,16 @@ http {
     fastcgi_read_timeout 300;
 
     location / {
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-Proto $scheme; 
       proxy_pass http://node-app;
     }
 
 
 
-    ssl_certificate /etc/ssl/certs/carpe+5.pem;
-    ssl_certificate_key /etc/ssl/private/carpe+5-key.pem;
+    ssl_certificate /etc/ssl/certs/local.carpedalan.com.pem;
+    ssl_certificate_key /etc/ssl/private/local.carpedalan.com-key.pem;
     # ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
     ########################################################################
