--- a/.env.ci
+++ b/.env.ci
@@ -12,4 +12,7 @@ AWS_SECRET_ACCESS_KEY=secret
 S3_BUCKET=carpedev
 NODE_ENV=ci
 LOG_LEVEL=none
+CDN_DOMAIN=photos.carpedalan.com
+DOMAIN=carpedalan.com
+CLOUDFRONT_KEY_ID=APKAIUIJTQRAIWFPJFEA
 
