--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
-    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=https://carpe cypress open --env configFile=local",
-    "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=https://carpe cypress run --env configFile=local",
+    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=https://local.carpedalan.com cypress open --env configFile=local",
+    "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://e2e_app cypress run --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
@@ -83,6 +83,7 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "aws-cloudfront-sign": "^2.2.0",
     "aws-sdk": "^2.383.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
