--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -3,12 +3,14 @@ version: '2.1'
 services:
   e2e: 
     image: $ECR_ENDPOINT/cypress:3.1.3
+    links:
+      - "e2e_app:local.carpedalan.com"
     environment:
       ## this enables colors in the output
       TERM: xterm
       NODE_ENV: ci
       PG_HOST: e2e_pg
-      CYPRESS_BASE_URL: http://e2e_app
+      CYPRESS_BASE_URL: http://local.carpedalan.com:3001
 
     depends_on:
       e2e_app: 
@@ -21,14 +23,18 @@ services:
       - ./.env:/app/.env
       - ./.env.example:/app/.env.example
     command: bash -c "ls -al && ls cypress -al && pwd && yarn cypress run --env configFile=ci --reporter junit --reporter-options 'mochaFile=/app/cypress/test-output.xml'"  
+    networks:
+      - backend
   e2e_app:
     container_name: e2e-app
+    domainname: local.carpedalan.com
     logging:
       driver: none
     depends_on:
       e2e_pg:
         condition: service_healthy
     image: $ECR_ENDPOINT/carpedev:$CIRCLE_SHA1
+    # image: carpe:latest
 
     volumes: 
       - ./db:/app/db
@@ -36,6 +42,7 @@ services:
 
     environment:
       NODE_ENV: ci
+      PORT: 3001
       CI: "true"
       PG_HOST: e2e_pg
       PG_USER: postgres
@@ -44,13 +51,16 @@ services:
       PGSSLMODE: disable
 
     healthcheck:
-      test: "curl -sS localhost/login"
+      test: "curl -sS localhost:3001/login"
       interval: 1s
       timeout: 1s
       retries: 10
     command: "yarn e2e:ci"
     ports:
-      - 3002:3001
+      - 3001:3001
+      - 80:80
+    networks:
+      - backend      
   e2e_pg:
     image: postgres:10.0-alpine
     tty: true
@@ -66,4 +76,10 @@ services:
       interval: 1s
       timeout: 1s
       retries: 20
+    networks:
+      - backend      
+
+networks:
+  backend:
+    driver: bridge      
 
