--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
-    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=https://local.carpedalan.com cypress open --env configFile=local",
+    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com:3001 cypress open --env configFile=local",
     "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://e2e_app cypress run --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
@@ -77,6 +77,7 @@
     "supertest": "^3.3.0",
     "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
+    
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
@@ -131,6 +132,7 @@
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0",
     "webpack-manifest-plugin": "^2.0.4",
+    "webpack-s3-plugin": "^1.0.3",
     "winston": "^3.1.0"
   },
   "optionalDependencies": {
