--- a/.env.ci
+++ b/.env.ci
@@ -13,6 +13,6 @@ S3_BUCKET=carpedev
 NODE_ENV=ci
 LOG_LEVEL=none
 CDN_DOMAIN=photos.local.carpedalan.com
-DOMAIN=carpedalan.com
+DOMAIN=local.carpedalan.com
 CLOUDFRONT_KEY_ID=APKAIUIJTQRAIWFPJFEA
 
