--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "supertest": "^3.3.0",
     "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
-    
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
@@ -130,6 +129,7 @@
     "superagent": "^4.1.0",
     "uuid": "^3.3.2",
     "webpack": "^4.28.3",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.0",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-s3-plugin": "^1.0.3",
