--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,15 @@ jobs:
       - run: 
           name: Install node dependencies
           command: yarn --ignore-optional
+      - run: 
+          name: Upload S3 assets
+          command: |
+              yarn build
+              ls -al
+              pwd
+              ./scripts/uploadAssets.js
+              cat dist/manifest.json
+
       - save_cache:
           paths:
             - node_modules
@@ -185,11 +194,6 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: 
-          name: install deps
-          command: |
-            sudo apt-get install python-pip python-dev build-essential
-            pip install awscli
 
       
 
@@ -217,11 +221,16 @@ jobs:
           name: "Jest FE"
           environment:
             JEST_JUNIT_OUTPUT: reports/junit/js-test-results.xml
-          command: yarn test --ci --testResultsProcessor="jest-junit"
+          command: yarn test --ci --testResultsProcessor="jest-junit" --coverage
+      - run: 
+          name: Upload Coverage
+          command: |
+              ./scripts/uploadTests.js
+
       - store_test_results:
-          path: reports/junit
+          path: reports/
       - store_artifacts:
-          path: reports/junit
+          path: reports/
 
   integration:
     <<: *defaults
@@ -236,6 +245,11 @@ jobs:
       - run:
           name: API Integration tests
           command: yarn integration:ci --coverage
+      - run: 
+          name: Upload Coverage
+          command: |
+              ./scripts/uploadTests.js
+
       - store_test_results:
           path: reports/junit
       - store_artifacts:
