--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ defaults: &defaults
 
 version: 2
 jobs:
-  e2e:  
+
+  deploy: 
     machine: true
     working_directory: ~/repo
     parallelism: 1
@@ -22,19 +23,6 @@ jobs:
               pip install \
               awscli==1.15.82
 
-      - run:
-          name: Run app
-          command: | 
-            docker-compose --version
-            aws s3 cp s3://configurations-pipeline/.env . 
-            eval $(aws ecr \
-              get-login \
-              --region us-east-1 \
-              --no-include-email\
-              ) 
-            docker-compose \
-              -f docker-compose.e2e.yml \
-              up --abort-on-container-exit
       - run:
           name: Register task definition
           command: |
@@ -90,12 +78,39 @@ jobs:
       #         ls -al
       #         ./scripts/releaseDocker.sh
 
+
+  e2e:  
+    machine: true
+    working_directory: ~/repo
+    parallelism: 1
+    steps:
+      - checkout
+      - run: 
+          name: Install AWS CLI
+          command: |
+              pip install \
+              awscli==1.15.82
+  
+      - run:
+          name: Run app
+          command: | 
+            docker-compose --version
+            aws s3 cp s3://configurations-pipeline/.env . 
+            eval $(aws ecr \
+                get-login \
+                --region us-east-1 \
+                --no-include-email\
+                ) 
+            docker-compose \
+                -f docker-compose.e2e.yml \
+                up --abort-on-container-exit
+  
       - store_test_results:
-          path: cypress
+            path: cypress
       - store_artifacts:
-          path: cypress/videos
+            path: cypress/videos
       - store_artifacts:
-          path: cypress/screenshots  
+            path: cypress/screenshots  
   build:
     machine: true
     environment:
@@ -277,3 +292,9 @@ workflows:
       - e2e:
           requires:
             - build
+      - deploy: 
+          requires: 
+            - e2e
+            - lint
+            - integration
+            - unit_test
