--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -348,7 +348,7 @@ workflows:
             - lint
             - integration
             - unit_test
-          filters: 
-            branches: 
-              only: 
-                - master
+        #   filters: 
+        #     branches: 
+        #       only: 
+        #         - master
