--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "html-webpack-plugin": "^3.2.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
+    "logrocket": "^0.6.19",
     "moment": "^2.23.0",
     "nodemon": "^1.18.9",
     "pg": "^7.7.1",
