Added style fixes

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
+    "u": "docker-compose up",
+    "d": "docker-compose down",
+    "du": "docker-compose down && docker-compose up",
+    "dub": "docker-compose down && docker-compose up --build",
     "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com:3001 cypress open --env configFile=local",
     "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://e2e_app cypress run --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
