--- a/package.json
+++ b/package.json
@@ -83,9 +83,9 @@
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
     "jest-styled-components": "^6.3.1",
-    "lighthouse": "^4.0.0-alpha.2-3.2.1",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3",
+    "lighthouse": "^4.1.0",
+    "lint-staged": "^8.1.1",
+    "prettier": "^1.16.2",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.8.0-alpha.0",
     "supertest": "^3.3.0",
