--- a/package.json
+++ b/package.json
@@ -150,7 +150,8 @@
     "webpack-cli": "^3.2.0",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-s3-plugin": "^1.0.3",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "winston-loggly-bulk": "^2.0.3"
   },
   "optionalDependencies": {
     "cypress": "3.1.3"
