--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-s3-plugin": "^1.0.3",
     "winston": "^3.1.0",
-    "winston-loggly-bulk": "^2.0.3"
+    "winston-loggly-bulk": "https://github.com/loggly/winston-loggly-bulk.git#3.x"
   },
   "optionalDependencies": {
     "cypress": "3.1.3"
