--- a/package.json
+++ b/package.json
@@ -36,9 +36,6 @@
         "lines": 20
       }
     },
-    "transform": {
-      "^.+\\.jsx?$": "babel7-jest"
-    },
     "transformIgnorePatterns": [
       "node_modules/(?!(react-virtualized|react-select|)/)"
     ],
@@ -56,7 +53,9 @@
       "text",
       "clover"
     ],
-    "setupTestFrameworkScriptFile": "./setupTests.js"
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -66,9 +65,9 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "babel-preset-jest": "^23.2.0",
-    "babel7-jest": "^1.0.1",
-    "eslint": "^5.11.1",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-preset-jest": "^24.1.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
@@ -80,12 +79,12 @@
     "glob": "7.1.3",
     "happypack": "^5.0.1",
     "husky": "^1.3.1",
-    "jest": "^23.6.0",
-    "jest-junit": "^5.2.0",
+    "jest": "^24.1.0",
+    "jest-junit": "^6.2.1",
     "jest-styled-components": "^6.3.1",
     "lighthouse": "^4.1.0",
-    "lint-staged": "^8.1.1",
-    "prettier": "^1.16.2",
+    "lint-staged": "^8.1.3",
+    "prettier": "^1.16.4",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.8.0-alpha.0",
     "supertest": "^3.3.0",
@@ -95,6 +94,7 @@
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@sentry/browser": "^4.5.3",
@@ -133,8 +133,10 @@
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
     "react": "16.8.0-alpha.0",
+    "react-day-picker": "^7.2.4",
     "react-dom": "16.8.0-alpha.0",
     "react-hot-loader": "^4.6.3",
+    "react-loadable": "^5.5.0",
     "react-router": "^4.4.0-beta.6",
     "react-router-dom": "^4.4.0-beta.6",
     "react-select": "^2.2.0",
