Added a bunch of swagger stuff.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,13 @@ services:
       target: dev
     volumes:
       - ./src:/app/src:delegated
+      - ./nodemon.json:/app/nodmon.json:delegated
       - ./server:/app/server:delegated
       - ./api:/app/api:delegated
       - ./scripts:/app/scripts:delegated
       - ./db:/app/db:delegated
       - ./shared:/app/shared:delegated
+      - ./api-v1:/app/api-v1:delegated
       - ./goodDataWithEtagAndKey.json:/app/goodDataWithEtagAndKey.json
       - ./.env-local:/app/.env
       - ./public:/app/public
