--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
-    "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 --delay 1 .",
     "start:prod": "NODE_ENV=production node .",
     "u": "docker-compose up",
     "d": "docker-compose down",
@@ -112,6 +112,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "date-fns": "2.0.0-alpha.26",
     "docker-compose": "^0.10.0",
     "dotenv-safe": "^6.1.0",
@@ -122,6 +123,7 @@
     "express": "^4.16.4",
     "express-cache-controller": "^1.1.0",
     "express-handlebars": "^3.0.0",
+    "express-openapi": "^4.4.0",
     "express-session": "^1.15.6",
     "express-winston": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -146,6 +148,7 @@
     "sharp": "^0.21.3",
     "styled-components": "^4.1.3",
     "superagent": "^4.1.0",
+    "swagger-ui-express": "^4.0.2",
     "up": "^1.0.2",
     "uuid": "^3.3.2",
     "webpack": "^4.29.2",
