--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
-    "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 --delay 1 .",
+    "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
     "u": "docker-compose up",
     "d": "docker-compose down",
@@ -84,6 +84,7 @@
     "jest-styled-components": "^6.3.1",
     "lighthouse": "^4.1.0",
     "lint-staged": "^8.1.3",
+    "openapi-response-validator": "^3.7.0",
     "prettier": "^1.16.4",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.8.0",
