--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,8 @@ services:
   alb:
     container_name: alb
     depends_on:
-      - app
-      # app: 
-      #   condition: service_healthy
+      app: 
+        condition: service_healthy
     image: ekino/nginx-brotli:latest-1.12.2-bfd2885
     restart: always
     volumes: 
@@ -48,7 +47,7 @@ services:
       PORT: 80
     command: yarn start
     healthcheck:
-      test: ["CMD-SHELL", "curl --silent --fail localhost:3001/healthcheck || exit 1"]
+      test: ["CMD-SHELL", "curl --silent --fail localhost:80/healthcheck || exit 1"]
       interval: 1s
       timeout: 1s
       retries: 40
@@ -67,7 +66,10 @@ services:
       interval: 1s
       timeout: 1s
       retries: 20
+
   pg_test:
+    logging: 
+      driver: "none"
     image: postgres:10.0-alpine
     container_name: test
     environment:
@@ -84,6 +86,8 @@ services:
       retries: 20
 
   pg_migrate:
+    logging: 
+      driver: "none"
     container_name: migrate
     environment: 
       NODE_ENV: test
