--- a/imageResizer/package.json
+++ b/imageResizer/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "docker run -v \"$PWD\":/var/task lambci/lambda:build-nodejs8.10 npm install sharp sqip knex exif-parser pg",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan-west --zip-file fileb://imageResizer.zip --profile carpedev --region us-west-2",
+    "deploy": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip index.js constants.js && cd .. && aws lambda update-function-code --function-name image-processor --zip-file fileb://imageResizer.zip --profile carpedalan-prod",
     "stage": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan-west --zip-file fileb://imageResizer.zip --profile carpedev --region us-west-2"
   },
   "author": "",
@@ -14,7 +14,7 @@
   "dependencies": {
     "exif-parser": "^0.1.12",
     "knex": "^0.16.3",
-    "pg": "^7.8.0",
+    "pg": "^7.8.1",
     "sharp": "^0.21.3",
     "sqip": "^0.3.3"
   }
