--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
-    "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "start": "DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",    
     "start:prod": "NODE_ENV=production node .",
     "u": "docker-compose up",
     "d": "docker-compose down",
@@ -90,7 +91,8 @@
     "react-test-renderer": "16.8.0",
     "supertest": "^3.4.2",
     "webpack-dev-middleware": "^3.5.1",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-stylish": "^0.1.8"
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
