Lots of things * Changed container name because i re-use it too much * Added swagger-js but haven't use it yet, to be used for client swagger things * Removed api from coverage and files for wallaby * Removed happy pack for now * Added security to user path * Added `posts` test for v1 * Added requirement for bulk delete api doc * Added requirement for bulk patch api doc * Added bulk delete integration tests * Added bulk patch integration tests * Added get post api doc * Added patch {id} api doc * Added delete tests * Added get tests * Added patch tests * Added 404 Error def for openapi * Added and fixed post openapi def * Added some 404 errors to bulk delete * Added 404 errors to bulk patch * IMPORTANT: Changed "name" to "key" for post create * Added WAY better error handling for API update, including AWS error * Added specific AWS error * Added serialized API doc to server rendering

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.3'
 
 services:
   alb:
-    container_name: alb
+    container_name: c_alb
     depends_on:
       app: 
         condition: service_healthy
