--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
-    "start": "DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",    
+    "start": "DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
     "u": "docker-compose up",
     "d": "docker-compose down",
@@ -151,6 +151,7 @@
     "sharp": "^0.21.3",
     "styled-components": "^4.1.3",
     "superagent": "^4.1.0",
+    "swagger-js": "^1.0.0",
     "swagger-ui-express": "^4.0.2",
     "up": "^1.0.2",
     "uuid": "^3.3.2",
