Added tests * Added patch test * logout test * Fixed schemas * Added Tag tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,32 +11,6 @@ defaults: &defaults
 version: 2
 jobs:
 
-  stage: 
-    machine: true
-    working_directory: ~/repo
-    parallelism: 1
-    steps:
-      - checkout
-      - run: 
-          name: Install AWS CLI
-          command: |
-              sudo apt-get install curl
-              pip install \
-              awscli==1.15.82
-
-      - run: 
-          name: Download heroku.sh
-          command: |
-              aws s3 cp s3://configurations-pipeline/heroku.sh .
-      - run: 
-          name: Release heroku
-          command: | 
-              source heroku.sh
-              echo $WEB_DOCKER_IMAGE_ID
-              ./scripts/releaseDocker.sh
-
-
-
   deploy: 
     machine: true
     working_directory: ~/repo
@@ -65,12 +39,11 @@ jobs:
               OLD_TASK_ID=`aws ecs list-tasks \
                 --cluster carpedalan \
                 --desired-status RUNNING \
-                --profile carpedalan-prod \
                 --family carpedalan | \
                   egrep "task" | tr "/" " " | tr "[" " " |  awk '{print $2}' | sed 's/"$//'`
 
               TASK_REVISION=`aws ecs describe-task-definition \
-                --task-definition carpedalan \
+                --task-definition carpedalan | \
                 egrep "revision" | tr "/" " " | awk '{print $2}' | sed 's/"$//'`
 
               echo "Updating with task revision ${TASK_REVISION}";
@@ -78,9 +51,8 @@ jobs:
               aws ecs update-service \
                 --cluster carpedalan \
                 --service carpedalan-service \
-                --task-definition carpedalan:18 \
+                --task-definition carpedalan:${TASK_REVISION} \
                 --desired-count 1 \ 
-                --profile carpedalan-prod
 
               # sleep 30
               # echo "Stopping ${OLD_TASK_ID}"
@@ -119,10 +91,11 @@ jobs:
           name: Run app
           command: | 
             docker-compose --version
-            aws s3 cp s3://configurations-pipeline/.env . 
+            aws s3 cp s3://carpedalan-pipeline-prod/.env . 
+            aws s3 cp s3://carpedalan-pipeline-prod/cfkeys/ ./server/cfkeys/ --recursive 
             eval $(aws ecr \
                 get-login \
-                --region us-east-1 \
+                --region us-west-2 \
                 --no-include-email\
                 ) 
             docker-compose \
@@ -157,37 +130,37 @@ jobs:
       - run: 
           name: Get config
           command: |
-            aws s3 cp s3://configurations-pipeline/.env . 
-            aws s3 cp s3://configurations-pipeline/pk-APKAIUIJTQRAIWFPJFEA.pem .
+            aws s3 cp s3://carpedalan-pipeline-prod/.env . 
+            aws s3 cp s3://carpedalan-pipeline-prod/cfkeys/ ./server/cfkeys/ --recursive 
       - run:
           name: Build application Docker image
           command: |
             docker build \
             --target=prod \
             -t app \
-            -t "${ECR_ENDPOINT}/carpedev:${CIRCLE_SHA1}" .
+            -t "${ECR_REPOSITORY}:${CIRCLE_SHA1}" .
 
       - run:
           name: Push image to ECR repository
           command: |
             # if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              eval $(aws ecr get-login --region us-east-1 --no-include-email) 
-              docker tag app "${ECR_ENDPOINT}/carpedev:${CIRCLE_SHA1}"
-              docker push "${ECR_ENDPOINT}/carpedev:${CIRCLE_SHA1}"
-      - run: 
-          name: Push image to heroku
-          command: | 
-            docker login --username=_ --password=${HEROKU_PASSWORD} registry.heroku.com
-            docker tag app registry.heroku.com/carpedalan/web
-            docker push registry.heroku.com/carpedalan/web
-            WEB_DOCKER_IMAGE_ID=`\
-                docker inspect \
-                registry.heroku.com/carpedalan/web \
-                --format={{.Id}} | sed -n 1p`
-                echo $WEB_DOCKER_IMAGE_ID
-            touch heroku.sh
-            echo "WEB_DOCKER_IMAGE_ID=${WEB_DOCKER_IMAGE_ID}" >> heroku.sh
-            aws s3 cp heroku.sh s3://configurations-pipeline/
+              eval $(aws ecr get-login --region us-west-2 --no-include-email) 
+              docker tag app "${ECR_REPOSITORY}:${CIRCLE_SHA1}"
+              docker push "${ECR_REPOSITORY}:${CIRCLE_SHA1}"
+      # - run: 
+      #     name: Push image to heroku
+      #     command: | 
+      #       docker login --username=_ --password=${HEROKU_PASSWORD} registry.heroku.com
+      #       docker tag app registry.heroku.com/carpedalan/web
+      #       docker push registry.heroku.com/carpedalan/web
+      #       WEB_DOCKER_IMAGE_ID=`\
+      #           docker inspect \
+      #           registry.heroku.com/carpedalan/web \
+      #           --format={{.Id}} | sed -n 1p`
+      #           echo $WEB_DOCKER_IMAGE_ID
+      #       touch heroku.sh
+      #       echo "WEB_DOCKER_IMAGE_ID=${WEB_DOCKER_IMAGE_ID}" >> heroku.sh
+      #       aws s3 cp heroku.sh s3://carpedalan-pipeline-prod/
       # - run: 
       #     name: Push image to Heroku registry
       #     command: |
@@ -274,7 +247,7 @@ jobs:
           name: "Jest FE"
           environment:
             JEST_JUNIT_OUTPUT: reports/junit/js-test-results.xml
-          command: yarn test --ci --testResultsProcessor="jest-junit" --coverage
+          command: yarn test --ci --testResultsProcessor="jest-junit" --coverage --verbose
       - run: 
           name: Upload Coverage
           command: |
@@ -324,22 +297,22 @@ workflows:
       - integration:
           requires:
             - dependencies
-      - migrate:
-          requires:
-            - stage
+      # - migrate:
+      #     requires:
+      #       - stage
       - e2e:
           requires:
             - build
-      - stage: 
-          requires: 
-            - e2e
-            - lint
-            - integration
-            - unit_test
-          filters: 
-            branches: 
-              ignore: 
-                - master
+      # - stage: 
+      #     requires: 
+      #       - e2e
+      #       - lint
+      #       - integration
+      #       - unit_test
+      #     filters: 
+      #       branches: 
+      #         ignore: 
+      #           - master
       - deploy: 
           requires: 
             - e2e
