--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
   e2e: 
-    image: $ECR_ENDPOINT/cypress:3.1.3
+    image: $CYPRESS_REPOSITORY:3.2.0
     links:
       - "e2e_app:local.carpedalan.com"
     environment:
@@ -33,7 +33,7 @@ services:
     depends_on:
       e2e_pg:
         condition: service_healthy
-    image: $ECR_ENDPOINT/carpedev:$CIRCLE_SHA1
+    image: $ECR_REPOSITORY:$CIRCLE_SHA1
     # image: carpe:latest
 
     volumes: 
