--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,6 @@ services:
       - ./.env-local:/app/.env
       - ./public:/app/public
       - ./webpack.config.js:/app/webpack.config.js
-      - ./pk-APKAIUIJTQRAIWFPJFEA.pem:/app/pk-APKAIUIJTQRAIWFPJFEA.pem
     ports:
       - 3001:80
       - 9227:9229
@@ -68,8 +67,8 @@ services:
       retries: 20
 
   pg_test:
-    logging: 
-      driver: "none"
+    # logging: 
+    #   driver: "none"
     image: postgres:10.0-alpine
     container_name: test
     environment:
