--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
                 --cluster carpedalan \
                 --service carpedalan-service \
                 --task-definition carpedalan:${TASK_REVISION} \
-                --desired-count 1 \ 
+                --desired-count 1
 
               # sleep 30
               # echo "Stopping ${OLD_TASK_ID}"
