Lots of tests * Removed react-select tree shaking * Updated dockerfile * Fixed integration test script * Added some config for accurate test coverage * omitted logout from wallaby (?!) * Fixed patch schema * Updated CF cert location * Made uploads upload with private ACL * Updated all tests to use new api login * Added after to close db connection during integration tests * Added a BUNCH of admin tests * Added read user cypress tests * Added cypress commands * Removed legacy API! * Added a bunch of testids * Added data test ids to dropdown selections

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,11 @@
         "react/forbid-foreign-prop-types": "off"
   
       }
+    }, {
+      "files": "cypress/**/*",
+      "rules": {
+        "jest/valid-expect": "off"
+      } 
     }
   ]
 }
