--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "LOG_LEVEL=none jest",
     "lint": "eslint src api db imageResizer scripts server shared  --ext .js,.jsx",
-    "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --forceExit --runInBand",
+    "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --runInBand",
     "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --forceExit --runInBand --verbose",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
@@ -18,7 +18,7 @@
     "d": "docker-compose down",
     "du": "docker-compose down && docker-compose up",
     "dub": "docker-compose down && docker-compose up --build",
-    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com:3001 cypress open --env configFile=local",
+    "e2e": "PG_PORT=5433 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com cypress open --env configFile=local",
     "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com cypress run --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
