--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,18 +265,10 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: 
-          name: Install AWS CLI
-          command: |
-              pip install \
-              awscli==1.15.82
-            
+
       - run:
           name: API Integration tests
-          command: |
-              aws s3 cp s3://carpedalan-pipeline-prod/goodDataWithEtagAndKey.json .
-              yarn integration:ci --coverage
-
+          command: yarn integration:ci --coverage
       - run: 
           name: Upload Coverage
           command: |
