--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "LOG_LEVEL=none jest",
     "lint": "eslint src api db imageResizer scripts server shared  --ext .js,.jsx",
     "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --runInBand",
-    "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --forceExit --runInBand --verbose",
+    "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --runInBand --verbose",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
